individual round page - round data rendering

--- a/views/profile.html
+++ b/views/profile.html
@@ -135,8 +135,8 @@
                 <tr>
 
                     <td> <%= date %> </td>
-                    <td> <a href="performance/<%= course_id %>"><%= courseName %> </td>
-                    <td> <a href="/<%= _id %>"><%= totalScore %> </td>
+                    <td> <a href="/performances/<%= course_id %>"><%= courseName %> </td>
+                    <td> <a href="/performance/<%= _id %>"><%= totalScore %> </td>
                     <td> <%= totalPutts %> </td>
                     <td> <div class="btn-group btn-group-xs close" role="group" aria-label="..." onclick='deleteScore(this)' data-id=<%= _id %> >X</div> </td>
 
