--- a/views/scorePage.html
+++ b/views/scorePage.html
@@ -53,9 +53,170 @@
             
 
         <h1>Individual Score Page</h1><br>
-        <h1>Course Name: </h1>
+<!--         <h3>Course Name: </h3> -->
 
-        <h5>1. extract ID from Params, 2. Query game DB using step 1</h5>
+                <div class="panel panel-default">
+                    <div id='courseName' class="panel-heading">Course Name:   </div>
+                        <table class="table" >
+                            <thead>
+                                <tr>
+                                    <td>Hole</td>
+                                    <td>Par</td>
+                                    <td>Yardage</td>
+                                    <td>Score</td>
+                                    <td>Putts</td>
+                                    <td>Nett Score</td>
+               
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr>
+                                    <td>1st</td>
+                                    <td id='par1'></td>
+                                    <td id='yardage1'></td>
+                                    <td id='score1'></td>          
+                                    <td id='putts1'></td>
+                                    <td id='nett1'></td>
+                                </tr>
+                                <tr>
+                                    <td>2nd</td>
+                                    <td id='par2'></td>
+                                    <td id='yardage2'></td>
+                                    <td id='score2'></td>          
+                                    <td id='putts2'></td>
+                                    <td id='nett2'></td>
+                                </tr>
+                                <tr>
+                                    <td>3rd</td>
+                                    <td id='par3'></td>
+                                    <td id='yardage3'></td>
+                                    <td id='score3'></td>          
+                                    <td id='putts3'></td>
+                                    <td id='nett3'></td>
+                                </tr>
+                                <tr>
+                                    <td>4th</td>
+                                    <td id='par4'></td>
+                                    <td id='yardage4'></td>
+                                    <td id='score4'></td>          
+                                    <td id='putts4'></td>
+                                    <td id='nett4'></td>
+                                </tr>
+                                <tr>
+                                    <td>5th</td>
+                                    <td id='par5'></td>
+                                    <td id='yardage5'></td>
+                                    <td id='score5'></td>          
+                                    <td id='putts5'></td>
+                                    <td id='nett5'></td>
+                                </tr>
+                                <tr>
+                                    <td>6th</td>
+                                    <td id='par6'></td>
+                                    <td id='yardage6'></td>
+                                    <td id='score6'></td>          
+                                    <td id='putts6'></td>
+                                    <td id='nett6'></td>
+                                </tr>
+                                <tr>
+                                    <td>7th</td>
+                                    <td id='par7'></td>
+                                    <td id='yardage7'></td>
+                                    <td id='score7'></td>          
+                                    <td id='putts7'></td>
+                                    <td id='nett7'></td>
+                                </tr>
+                                <tr>
+                                    <td>8th</td>
+                                    <td id='par8'></td>
+                                    <td id='yardage8'></td>
+                                    <td id='score8'></td>          
+                                    <td id='putts8'></td>
+                                    <td id='nett8'></td>
+                                </tr>
+                                <tr>
+                                    <td>9th</td>
+                                    <td id='par9'></td>
+                                    <td id='yardage9'></td>
+                                    <td id='score9'></td>          
+                                    <td id='putts9'></td>
+                                    <td id='nett9'></td>
+                                </tr>
+                                <tr>
+                                    <td>10th</td>
+                                    <td id='par10'></td>
+                                    <td id='yardage10'></td>
+                                    <td id='score10'></td>          
+                                    <td id='putts10'></td>
+                                    <td id='nett10'></td>
+                                </tr>
+                                <tr>
+                                    <td>11th</td>
+                                    <td id='par11'></td>
+                                    <td id='yardage11'></td>
+                                    <td id='score11'></td>          
+                                    <td id='putts11'></td>
+                                    <td id='nett11'></td>
+                                </tr>
+                                <tr>
+                                    <td>12th</td>
+                                    <td id='par12'></td>
+                                    <td id='yardage12'></td>
+                                    <td id='score12'></td>          
+                                    <td id='putts12'></td>
+                                    <td id='nett12'></td>
+                                </tr>
+                                <tr>
+                                    <td>13th</td>
+                                    <td id='par13'></td>
+                                    <td id='yardage13'></td>
+                                    <td id='score13'></td>          
+                                    <td id='putts13'></td>
+                                    <td id='nett13'></td>
+                                </tr>
+                                <tr>
+                                    <td>14th</td>
+                                    <td id='par14'></td>
+                                    <td id='yardage14'></td>
+                                    <td id='score14'></td>          
+                                    <td id='putts14'></td>
+                                    <td id='nett14'></td>
+                                </tr>
+                                <tr>
+                                    <td>15th</td>
+                                    <td id='par15'></td>
+                                    <td id='yardage15'></td>
+                                    <td id='score15'></td>          
+                                    <td id='putts15'></td>
+                                    <td id='nett15'></td>
+                                </tr>
+                                <tr>
+                                    <td>16th</td>
+                                    <td id='par16'></td>
+                                    <td id='yardage16'></td>
+                                    <td id='score16'></td>          
+                                    <td id='putts16'></td>
+                                    <td id='nett16'></td>
+                                </tr>
+                                <tr>
+                                    <td>17th</td>
+                                    <td id='par17'></td>
+                                    <td id='yardage17'></td>
+                                    <td id='score17'></td>          
+                                    <td id='putts17'></td>
+                                    <td id='nett17'></td>
+                                </tr>
+                                <tr>
+                                    <td>18th</td>
+                                    <td id='par18'></td>
+                                    <td id='yardage18'></td>
+                                    <td id='score18'></td>          
+                                    <td id='putts18'></td>
+                                    <td id='nett18'></td>
+                                </tr>                            
+                            </tbody>
+                        </table>
+                </div>
 
     </div>
     </body>
@@ -67,9 +228,9 @@
               // AJAX request to get course data - name, par etc. //
             function roundData() {
                 var pathArray = window.location.pathname.split('/');
-                var roundID = pathArray[1]; 
-                var customURL = "/" + roundID + '.json';
-                console.log(roundID);           
+                var roundID = pathArray[2]; 
+                var customURL = "/round/" + roundID + '.json';
+                // console.log(roundID);           
                 // REGEX to extract the course ID
 
                 // 1. AJAX request to get course info, querying DB using courseID
@@ -77,7 +238,72 @@
                         url: customURL,
                         type: 'GET',
                         datatype: 'json',
-                        success: displayAll
+                        success: function(data) {
+                          console.log(data);
+                          var info = data[0];
+
+                          var courseName = info.courseName;
+                          $('#courseName').append(courseName);
+
+                          var nett = info.nettScore;
+                          $('#nett1').text(nett[0]);
+                          $('#nett2').text(nett[1]);
+                          $('#nett3').text(nett[2]);
+                          $('#nett4').text(nett[3]);
+                          $('#nett5').text(nett[4]);
+                          $('#nett6').text(nett[5]);
+                          $('#nett7').text(nett[6]);
+                          $('#nett8').text(nett[7]);
+                          $('#nett9').text(nett[8]);
+                          $('#nett10').text(nett[9]);
+                          $('#nett11').text(nett[10]);
+                          $('#nett12').text(nett[11]);
+                          $('#nett13').text(nett[12]);
+                          $('#nett14').text(nett[13]);
+                          $('#nett15').text(nett[14]);
+                          $('#nett16').text(nett[15]);
+                          $('#nett17').text(nett[16]);
+                          $('#nett18').text(nett[17]);
+
+                          var putts = info.putts;
+                          $('#putts1').text(putts[0]);
+                          $('#putts2').text(putts[1]);
+                          $('#putts3').text(putts[2]);
+                          $('#putts4').text(putts[3]);
+                          $('#putts5').text(putts[4]);
+                          $('#putts6').text(putts[5]);
+                          $('#putts7').text(putts[6]);
+                          $('#putts8').text(putts[7]);
+                          $('#putts9').text(putts[8]);
+                          $('#putts10').text(putts[9]);
+                          $('#putts11').text(putts[10]);
+                          $('#putts12').text(putts[11]);
+                          $('#putts13').text(putts[12]);
+                          $('#putts14').text(putts[13]);
+                          $('#putts15').text(putts[14]);
+                          $('#putts16').text(putts[15]);
+                          $('#putts17').text(putts[16]);
+                          $('#putts18').text(putts[17]);                          
+                          var score = info.score;
+                          $('#score1').text(score[0]);
+                          $('#score2').text(score[1]);
+                          $('#score3').text(score[2]);
+                          $('#score4').text(score[3]);
+                          $('#score5').text(score[4]);
+                          $('#score6').text(score[5]);
+                          $('#score7').text(score[6]);
+                          $('#score8').text(score[7]);
+                          $('#score9').text(score[8]);
+                          $('#score10').text(score[9]);
+                          $('#score11').text(score[10]);
+                          $('#score12').text(score[11]);
+                          $('#score13').text(score[12]);
+                          $('#score14').text(score[13]);
+                          $('#score15').text(score[14]);
+                          $('#score16').text(score[15]);
+                          $('#score17').text(score[16]);
+                          $('#score18').text(score[17]);
+                        }
                 });
             };
 
